Map for pptName indexes changed to List; Length of String var-value is recorded as an int (4bytes)